Fixes voigon issues